Fixed the contrast of colours between links

--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,15 @@ a:hover {
   outline: 3px solid #000;
 }
 
+.skip-links a {
+  position: absolute;
+  top: -3em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
 .about {
   position: relative;
 }
@@ -93,7 +102,7 @@ td {
   border-color: #568c36;
 }
 
-.footer {
+footer {
   background-color: #113c00;
   color: #fff;
 }
